--- a/css/main.css
+++ b/css/main.css
@@ -1,321 +1,321 @@
 /*@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{font-family:'Roboto', sans-serif}h1{font-weight:100;font-size:50px}.home{height:100%;width:100%;text-align:center}.home img{width:100%;max-width:300px;margin:0 auto}.home .Aligner{min-height:100vh;display:-ms-flexbox;display:flex;-ms-flex-align:center;align-items:center;-ms-flex-pack:center;justify-content:center}.home .Aligner-item{max-width:50%}.home .menu ul li{padding:10px 15px;display:inline-block;font-family:'Roboto', sans-serif;font-size:18px;font-weight:500}.home .version-num{background:#E8E8E8;border-radius:4px;padding:7px 15px;display:inline-block;font-size:12px;margin:10px 0 20px}.home a{text-decoration:none;color:#30395C;transition:all 0.3s ease-in-out}.home a:hover{color:#43D4D6};
-*//*-----------MULTIPLE THINGS---------------*/
-*{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+*/ /*-----------MULTIPLE THINGS---------------*/
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.container{
-	max-width: 1400px;
-	margin: 0 auto;
+.container {
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 /*---------------BODY----------------------*/
-body{
-	font-family: 'Roboto', sans-serif;
-	background: #0e0642;
+body {
+  font-family: "Roboto", sans-serif;
+  background: #0e0642;
 }
 
 /*--------------HEADER SECTION----------------------*/
-header{     
-	display: flex;     
-	width: 100%;     
-	justify-content: space-between;     
-	padding: 15px; 
+header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 15px;
 }
 
-header .logo{
-	width: 200px;
+header .logo {
+  width: 200px;
 }
 
-header .logo img{
-	width: 100%;
+header .logo img {
+  width: 100%;
 }
 
-header nav{
-	align-self: center;
-	position: relative;
+header nav {
+  align-self: center;
+  position: relative;
 }
 
-header nav a{
-	color: #fff;
-	text-decoration: none;
-	font-size: 1.2rem;
-	font-weight: 500;
-	padding: 0 10px;
+header nav a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+  padding: 0 10px;
 }
 
 /*------------------TOP SECTION--------------------*/
-#top-section{
-	position: relative;
-	height: 100vh;
+#top-section {
+  position: relative;
+  height: 100vh;
 }
 
-#top-section .bluredbg{
-	background-image: linear-gradient(45deg, rgba(14,6,66,1) 0%,rgba(14,6,66,0.99) 1%,rgba(10,122,178,0.32) 68%,rgba(125,185,232,0) 100%), url(/img/album.jpg);
-	background-size: cover;
-	height: 100vh;
-	width: 100%;
-	filter: blur(40px) saturate(100%);
-	position: absolute;
-	z-index: 1;
+#top-section .bluredbg {
+  background-image: linear-gradient(
+      45deg,
+      rgba(14, 6, 66, 1) 0%,
+      rgba(14, 6, 66, 0.99) 1%,
+      rgba(10, 122, 178, 0.32) 68%,
+      rgba(125, 185, 232, 0) 100%
+    ),
+    url(/img/album.jpg);
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  filter: blur(40px) saturate(100%);
+  position: absolute;
+  z-index: 1;
 }
 
-#top-section .floating-img{
-	position: absolute;
-	z-index: 2;
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: flex-end;
+#top-section .floating-img {
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
-#top-section .sean-img{
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	padding-top: 75px;
+#top-section .sean-img {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  padding-top: 75px;
 }
 
-#top-section .sean-img img{
-	width: 400px;
-	height: 400px;
-	filter: contrast(120%);
+#top-section .sean-img img {
+  width: 40rem;
+  height: 40rem;
+  filter: contrast(120%);
 }
 
 /*------------------BIO SECTION---------------------*/
-#bio{
-	background: black;
-	padding: 100px 0;
+#bio {
+  background: black;
+  padding: 100px 0;
 }
 
-#bio .container{
-	display: flex;
-	max-width: 1400px;
-	margin: 0 auto;
+#bio .container {
+  display: flex;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-#bio p{
-	width: 50%;
-	color: #fff;
-	line-height: 1.8;
-	font-size: .9rem;
-	position: relative;
-	z-index: 3;
-	padding: 0 50px;
+#bio p {
+  width: 50%;
+  color: #fff;
+  line-height: 1.8;
+  font-size: 0.9rem;
+  position: relative;
+  z-index: 3;
+  padding: 0 50px;
 }
 
-#bio .logo-centered{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 50%;
-	padding: 0 50px;
+#bio .logo-centered {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  padding: 0 50px;
 }
 
-#bio .logo-centered img{
-	width: 100%;
+#bio .logo-centered img {
+  width: 100%;
 }
 
 /*-----------------MEDIA SECTION--------------------------*/
-#media{
-	padding: 100px 0;
-	background-image: url("/img/original.jpg");
-	background-size: cover;
+#media {
+  padding: 100px 0;
+  background-image: url("/img/original.jpg");
+  background-size: cover;
 }
 
-#media .title{
-	background: black;
-	font-size: 1.1rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	padding: 20px;
-	text-align: center;
-	width: 100%;
-	max-width: 500px;
-	margin: 0 auto;
-	color: white;
+#media .title {
+  background: black;
+  font-size: 1.1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  color: white;
 }
 
-#media .videos{
-	padding: 80px 50px 0;
-	display: grid;
-	grid-template-columns: 50% 50%;
-	grid-gap: 10px;
+#media .videos {
+  padding: 80px 50px 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-gap: 10px;
 }
 
-#media .videos .video{
-	border-radius: 4px;
-	overflow: hidden;
-	height: 300px;
-	-webkit-box-shadow: -10px 10px 10px 0px rgba(33,70,145,1);
-	-moz-box-shadow: -10px 10px 10px 0px rgba(33,70,145,1);
-	box-shadow: -10px 10px 10px 0px rgba(33,70,145,1);
+#media .videos .video {
+  border-radius: 4px;
+  overflow: hidden;
+  height: 300px;
+  -webkit-box-shadow: -10px 10px 10px 0px rgba(33, 70, 145, 1);
+  -moz-box-shadow: -10px 10px 10px 0px rgba(33, 70, 145, 1);
+  box-shadow: -10px 10px 10px 0px rgba(33, 70, 145, 1);
 }
 
-#media .videos .video iframe{
-	width: 100%;
-	height: 100%;
+#media .videos .video iframe {
+  width: 100%;
+  height: 100%;
 }
 
 /*--------------ALBUM SECTION--------------------*/
-#music{
-	padding: 80px 0;
+#music {
+  padding: 80px 0;
 }
 
-#music .bluredbg{
-	background-image: linear-gradient(45deg, rgba(231,23,23,1) 0%,rgba(231,23,23,0.99) 1%,rgba(231,23,23,0.32) 68%,rgba(231,23,23,0) 100%), url(/img/albumbig.jpg);
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-	filter: blur(40px) saturate(100%);
-	position: absolute;
-	z-index: 1;
+#music .bluredbg {
+  background-image: linear-gradient(
+      45deg,
+      rgba(231, 23, 23, 1) 0%,
+      rgba(231, 23, 23, 0.99) 1%,
+      rgba(231, 23, 23, 0.32) 68%,
+      rgba(231, 23, 23, 0) 100%
+    ),
+    url(/img/albumbig.jpg);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  filter: blur(40px) saturate(100%);
+  position: absolute;
+  z-index: 1;
 }
 
-#music .container{
-	display: flex;
-	padding: 0 50px;
-	position: relative;
-	z-index: 3;
+#music .container {
+  display: flex;
+  padding: 0 50px;
+  position: relative;
+  z-index: 3;
 }
 
-#music .container .info{
-	width: 50%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+#music .container .info {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#music .container .info .title{
-	font-size: 3rem;
-	font-weight: 700;
-	color: #fff;
-	text-align: center;
-	margin-bottom: 100px;
+#music .container .info .title {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 100px;
 }
 
-#music .container .info .singles{
-	color: #fff;
-	list-style-type: none;
-	display: grid;
-	grid-template-columns: 50% 50%;
-	width: 400px;
-	margin: 0 auto;
-	margin-bottom: 80px;
+#music .container .info .singles {
+  color: #fff;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  width: 400px;
+  margin: 0 auto;
+  margin-bottom: 80px;
 }
 
-#music .container .info .singles li{
-	font-size: 1.5rem;
-	font-weight: 300;
-	text-align: center;
-	margin-bottom: 20px;
+#music .container .info .singles li {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-#music .container .info .logos{
-	list-style-type: none;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 20px;
+#music .container .info .logos {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
 }
 
-#music .container .album-cover{
-	width: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+#music .container .album-cover {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-#music .container .album-cover img{
-	width: 50%;
+#music .container .album-cover img {
+  width: 50%;
 }
 
 /*-----MEDIA QUERIY MAX-WIDTH 768PX--------*/
-@media(max-width: 768px){
-	#top-section .sean-img{
-	width: 100%;
-	height: 100%;
-	text-align: center;
-	padding-top: 75px;
-	}
+@media (max-width: 768px) {
+  #top-section .sean-img {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    padding-top: 75px;
+  }
 
-	#music{
-		width: 100%;
-	}
+  #music {
+    width: 100%;
+  }
 
-	#music .container{
-		display: grid;
-		grid-auto-rows: minmax(100px, auto);
-	}
+  #music .container {
+    display: grid;
+    grid-auto-rows: minmax(100px, auto);
+  }
 
-	#music .container .info{
-		width: 100%;
-	}
+  #music .container .info {
+    width: 100%;
+  }
 
-	#music .container .info .title{
-		text-align: center;	
-	}
+  #music .container .info .title {
+    text-align: center;
+  }
 
-	#music .container .info .singles{
-		display: block;
-		text-align: center;
-		width: 100%;
-	}
+  #music .container .info .singles {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
 
-	#music .container .album-cover{
-		display: block;
-		width: 100%;
-		text-align: center;
-		grid-row: 1/2;
-		padding-bottom: 2rem;
-	}
+  #music .container .album-cover {
+    display: block;
+    width: 100%;
+    text-align: center;
+    grid-row: 1/2;
+    padding-bottom: 2rem;
+  }
 }
 
 /*---------MEDIA QUERY MAX-WIDTH 650PX---------- */
-@media(max-width: 650px){
-	#media .container .videos{
-		display: grid;
-		grid-template-columns: 1fr;
-	}
+@media (max-width: 650px) {
+  #media .container .videos {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
 }
 
 /*--------MEDIA QUERY MAX-WIDTH 640PX----------*/
-@media(max-width: 640px){
-	header .logo{
-		padding-top: 10px;
-	}
+@media (max-width: 640px) {
+  header .logo {
+    padding-top: 10px;
+  }
 
-	header nav{
-		display: grid;
-	}
+  header nav {
+    display: grid;
+  }
 
-	header nav a{
-		padding-top: 10px;
-	}
+  header nav a {
+    padding-top: 10px;
+  }
 }
 
 /*--------MEDIA QUERY MAX-WIDTH 420PX----*/
-@media(max-width: 420px){
-	#top-section .sean-img img{
-	width: 20rem;
-	height: 20rem;
-	filter: contrast(120%);
-	}
+@media (max-width: 420px) {
+  #top-section .sean-img img {
+    width: 20rem;
+    height: 20rem;
+    filter: contrast(120%);
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
